add missing Swagger annotation
